test/fails/bad_generics/tags1.lgl
tag a is vec<2>;
tag b is vec<2>;
tag c is b;
tag d is b;
tag e is c;

`t id<`t>(`t x) {
    return x;
}

void main() {
    b fail = id<a>([1., 2.]);
}